<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.lsilberstein.todoapp.EditDialog">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="9"
        android:id="@+id/etShortName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spPriority"
        android:layout_alignBottom="@+id/etShortName"
        android:layout_toRightOf="@+id/etShortName"
        android:layout_toEndOf="@+id/etShortName"
        android:spinnerMode="dropdown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_label"
        android:id="@+id/btnSaveEdit"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/spPriority"
        android:layout_alignEnd="@+id/spPriority" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:id="@+id/btnDelete"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/details_label"
        android:id="@+id/tvDetails"
        android:layout_below="@+id/etShortName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etDetails"
        android:layout_below="@+id/tvDetails"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/details_hint"
        android:layout_above="@+id/btnSetDate"
        android:layout_alignRight="@+id/spPriority"
        android:layout_alignEnd="@+id/spPriority" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10/10/2011"
        android:id="@+id/btnSetDate"
        android:layout_alignTop="@+id/tvDateLabel"
        android:layout_toRightOf="@+id/btnDelete"
        android:layout_toEndOf="@+id/btnDelete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/due_date"
        android:id="@+id/tvDateLabel"
        android:layout_marginBottom="22dp"
        android:layout_above="@+id/btnDelete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/camera"
        android:id="@+id/btnSetPhoto"
        android:layout_toRightOf="@+id/btnSetDate"
        android:layout_toEndOf="@+id/btnSetDate"
        android:layout_below="@+id/etDetails" />


</RelativeLayout>
